--- a/complete/backend/requirements.txt
+++ b/complete/backend/requirements.txt
@@ -1,10 +1,7 @@
-fastapi==0.104.1
-uvicorn==0.23.2
-sqlalchemy==2.0.23
+fastapi==0.105.0
+uvicorn==0.24.0
 pydantic==2.4.2
-python-jose==3.3.0
-passlib==1.7.4
+pydantic-settings==2.0.3
+sqlalchemy==2.0.23
 python-dotenv==1.0.0
-python-multipart==0.0.6
-bcrypt==4.0.1
-email-validator==2.1.0
+aiosqlite==0.19.0
