--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,7 @@
 		"ghcr.io/devcontainers/features/node:latest": {
 			"version": "lts"
 		},
+		"ghcr.io/devcontainers/features/docker-in-docker:latest": {},
 		"ghcr.io/devcontainers/features/common-utils:latest": {}
 	},
 
