--- a/complete/backend/requirements.txt
+++ b/complete/backend/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.105.0
-uvicorn==0.24.0
-pydantic==2.4.2
-pydantic-settings==2.0.3
-sqlalchemy==2.0.23
-python-dotenv==1.0.0
-aiosqlite==0.19.0
+fastapi>=0.103.1
+uvicorn>=0.22.0
+sqlalchemy>=2.0.0
+pydantic>=2.0.0
+python-dotenv>=1.0.0
+pytest>=7.0.0
+httpx>=0.24.0
+pydantic-settings>=2.0.0
