--- a/complete/frontend/Dockerfile
+++ b/complete/frontend/Dockerfile
@@ -1,16 +1,16 @@
-FROM node:22.14.0-alpine as build
+FROM node:16-alpine as build
 
 WORKDIR /app
 
 COPY package.json package-lock.json* ./
-RUN npm ci
+RUN npm ci --no-cache
 
 COPY public/ public/
 COPY src/ src/
 
 RUN npm run build
 
-FROM nginx:alpine
+FROM nginx:stable-alpine
 
 COPY --from=build /app/build /usr/share/nginx/html
 
